Fix tmp_dir and exit help

--- a/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/SDOSL10n.xcscheme
+++ b/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/SDOSL10n.xcscheme
@@ -121,7 +121,7 @@
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
-            key = "TMP_DIR"
+            key = "TEMP_DIR"
             value = "${PROJECT_DIR}"
             isEnabled = "YES">
          </EnvironmentVariable>
