--- a/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/SDOSL10n.xcscheme
+++ b/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/SDOSL10n.xcscheme
@@ -96,7 +96,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--unlock-files"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
