--- a/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/App - SPM.xcscheme
+++ b/Sample/SDOSL10n/SDOS.xcodeproj/xcshareddata/xcschemes/App - SPM.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1170"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "290B17272554390600CF9A0F"
-               BuildableName = "AppL10n.app"
-               BlueprintName = "AppL10n"
+               BlueprintIdentifier = "29859187253D88BA00FF85B4"
+               BuildableName = "AppL10n-SPM.app"
+               BlueprintName = "AppL10n-SPM"
                ReferencedContainer = "container:SDOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "290B17272554390600CF9A0F"
-            BuildableName = "AppL10n.app"
-            BlueprintName = "AppL10n"
+            BlueprintIdentifier = "29859187253D88BA00FF85B4"
+            BuildableName = "AppL10n-SPM.app"
+            BlueprintName = "AppL10n-SPM"
             ReferencedContainer = "container:SDOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "290B17272554390600CF9A0F"
-            BuildableName = "AppL10n.app"
-            BlueprintName = "AppL10n"
+            BlueprintIdentifier = "29859187253D88BA00FF85B4"
+            BuildableName = "AppL10n-SPM.app"
+            BlueprintName = "AppL10n-SPM"
             ReferencedContainer = "container:SDOS.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
